--- a/src/apps/web/tsconfig.json
+++ b/src/apps/web/tsconfig.json
@@ -2,6 +2,14 @@
   "extends": "@4k/typescript-config/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./*"
+      ],
+      "@4k/*": [
+        "../../packages/*"
+      ]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -9,8 +17,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "../../packages/ui/components/ui/button.tsx"
   ],
-  "exclude": [
-    "node_modules"
-  ]
 }
