--- a/src/apps/web/package.json
+++ b/src/apps/web/package.json
@@ -12,19 +12,20 @@
   },
   "dependencies": {
     "@4k/ui": "*",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@4k/eslint-config": "*",
-    "@4k/typescript-config": "*",
     "@4k/tailwind-config": "*",
+    "@4k/typescript-config": "*",
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
-    "typescript": "5.7.3",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "postcss": "^8"
+    "typescript": "5.7.3"
   }
 }
