--- a/src/apps/web/package.json
+++ b/src/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@4k/ui": "*",
+    "@strapi/blocks-react-renderer": "^1.0.2",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
@@ -24,6 +25,7 @@
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
