--- a/src/apps/web/package.json
+++ b/src/apps/web/package.json
@@ -14,6 +14,7 @@
     "@4k/ui": "*",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
+    "next-international": "^1.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
