--- a/src/apps/web/package.json
+++ b/src/apps/web/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@4k/ui": "*",
+    "@strapi/blocks-react-renderer": "^1.0.2",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "next-international": "^1.3.1",
