--- a/src/apps/web/package.json
+++ b/src/apps/web/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "next-international": "^1.3.1",
+    "nuqs": "^2.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
